# napari-foobar

./: LICENSE  README.md  environment.yml  mkdocs.yml  setup.cfg  tox.ini
src/napari_foobar/: __init__.py  _widget.py  napari.yaml
src/napari_foobar/_tests/: test_dock_widget.py
